# FunWithOpenCV

./: .gitignore  CMakeLists.txt  README.md  clientRun.cpp  main.cpp  serverRun.cpp
Client/: TCPClient.cpp  TCPClient.h
Server/: Server.cpp  Server.h  TCPServer.cpp  TCPServer.h
Server/dtos/: TransferObjectData.h  TransferObjectMetaData.h
Server/transferUtils/: TransferObjectData.cpp  TransferObjectData.h
TCP/Client/: TCPClient.cpp  TCPClient.h
TCP/Server/: TCPServer.cpp  TCPServer.h
Tests/: TCPController.cpp  TCPController.h  TestingClass.cpp  TestingClass.h
utils/: ByteImage.cpp  ByteImage.h
